--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="navbar">
             <div class="nav-logo border">
-                <div class="logo"></div>
+                <div class="logo"><a target="_blank" href="https://amazon.com"><img src="logo.jpg" alt=""></a></div>
             </div>
 
             <div class="nav-location border">
@@ -62,15 +62,17 @@
                 <i class="ri-menu-line"></i>
                 All
             </div>
-            <div class="panel-options border">
-                <p>Today's Deals</p>
-                <p>Prime Video</p>
-                <p>Registry</p>
-                <p>Customer Service</p>
-                <p>Gift Cards</p>
-                <p>Sell</p>
+            <div class="panel-options">
+                <div class="menu-option border">Today's Deals</div>
+                <div class="menu-option border">Prime Video</div>
+                <div class="menu-option border">Registry</div>
+                <div class="menu-option border">Customer Service</div>
+                <div class="menu-option border">Gift Cards</div>
+                <div class="menu-option border">Sell</div>
             </div>
-            <div class="panel-deals border">Shop deals in Electronics</div>
+            <div class="panel-deals border">
+                Shop deals in Electronics
+            </div>
 
         </div>
     </header>
@@ -267,7 +269,7 @@
                 </div>
             </div>
         
-            <div class="third-row">
+            <div class="third-row r-hover">
                 <div class="l-prod-title">
                     <h2>Top picks for India</h2>
                 </div >
@@ -284,7 +286,7 @@
 
             </div>
 
-            <div class="fourth-row">
+            <div class="fourth-row  r-hover">
                 <div class="l-prod-title">
                     <h2>Most wished for in Movies & TV</h2>
                 </div >
@@ -411,7 +413,7 @@
                 </div>
             </div>
 
-            <div class="sixth-row">
+            <div class="sixth-row  r-hover">
                 <div class="l-prod-title">
                     <h2>Best Sellers in Beauty & Personal Care</h2>
                 </div >
@@ -435,7 +437,7 @@
 
             </div>
 
-            <div class="seventh-row">
+            <div class="seventh-row  r-hover">
                 <div class="l-prod-title">
                     <h2>Best Sellers in Books</h2>
                 </div >
